<resources>
    <string name="app_name">SocialApp</string>
    <string name="account_name">请输入账号</string>
    <string name="password_name">请输入密码</string>
    <string name="land">登陆</string>
    <string name="register">注册</string>
    <string name="news">消息</string>
    <string name="contacts_main">联系人</string>
    <string name="set">设置</string>
    <string name="content_liao">请输入...</string>
    <string name="send">发送</string>
</resources>
