<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/falsh_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_white_back" />

        </LinearLayout>
    <LinearLayout

        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/account_edit_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_name" />

        <EditText
            android:id="@+id/password_edit_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edit1_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_name" />

            <ImageView
                android:id="@+id/chat_register_password_code"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/register_main_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/login_btnbg"
            android:text="@string/register"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
